--- a/package.json
+++ b/package.json
@@ -11,12 +11,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "autoprefixer": "^9.7.4",
     "babel-core": "^6.26.3",
+    "babel-helper-vue-jsx-merge-props": "^2.0.0",
     "babel-loader": "^7.1.5",
+    "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-vue-jsx": "^3.7.0",
+    "babel-preset-env": "^1.7.0",
+    "core-js": "^3.6.4",
     "cross-env": "^7.0.0",
     "css-loader": "^3.4.2",
     "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
+    "postcss-loader": "^3.0.0",
     "style-loader": "^1.1.3",
     "stylus-loader": "^3.0.2",
     "url-loader": "^3.0.0",
