--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "css-loader": "^3.4.2",
     "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "postcss-loader": "^3.0.0",
     "style-loader": "^1.1.3",
     "stylus-loader": "^3.0.2",
