--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-vue-jsx": "^3.7.0",
     "babel-preset-env": "^1.7.0",
+    "clean-webpack-plugin": "^3.0.0",
     "core-js": "^3.6.4",
     "cross-env": "^7.0.0",
     "css-loader": "^3.4.2",
