'素材管理组件完成'

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "autoprefixer": "^9.7.4",
+    "axios": "^0.19.2",
     "babel-core": "^6.26.3",
     "babel-helper-vue-jsx-merge-props": "^2.0.0",
     "babel-loader": "^7.1.5",
@@ -24,19 +25,32 @@
     "css-loader": "^3.4.2",
     "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
+    "iview": "^3.5.4",
+    "koa": "^2.11.0",
+    "koa-bodyparser": "^4.3.0",
+    "koa-multer": "^1.0.2",
+    "koa-router": "^8.0.8",
     "mini-css-extract-plugin": "^0.9.0",
+    "mongoose": "^5.9.6",
+    "multer": "^1.4.2",
     "postcss-loader": "^3.0.0",
     "style-loader": "^1.1.3",
     "stylus-loader": "^3.0.2",
     "url-loader": "^3.0.0",
+    "v-viewer": "^1.5.1",
+    "view-design": "^4.1.3",
+    "viewerjs": "^1.5.0",
     "vue": "^2.6.11",
     "vue-loader": "^15.8.3",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.11",
+    "vue-video-player": "^5.0.2",
     "webpack": "^4.41.5",
     "webpack-dev-server": "^3.10.3"
   },
   "devDependencies": {
+    "less": "^3.11.1",
+    "less-loader": "^5.0.0",
     "stylus": "^0.54.7",
     "webpack-cli": "^3.3.10"
   }
